# last_operaitions_vidget

./: .flake8  .gitignore  pyproject.toml
data/: dict_file.json  list_file.json  operations.json  test.XLSX  test.csv  trans_1.json  trans_2.json  trans_3.json
src/: decorators.py  generators.py  masks.py  processing.py  re_utils.py  re_utils2.py  utils.py  widget.py
tests/: test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_re_utils.py  test_utils.py  test_widget.py
